CASSJAVA-115: Java 25 support patch by Jane He; reviewed by Bret McGuire